Added Signing definitions

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,13 +10,14 @@
 
 [platformio]
 ;default_envs = MySpro1MHzatmega328
-;default_envs = MySpro8MHzatmega328
-default_envs = pro8MHzatmega328
+default_envs = MySpro8MHzatmega328
+;default_envs = pro8MHzatmega328
 
 [extra]
 lib_deps =
     MySensors@>=2.3.1
 monitor_speed = 38400
+upload_speed = 9600
 
 
 [env:pro8MHzatmega328]
